# rdash-assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deploy-core.yaml
argocd/: platform-addons-app.yaml  project.yaml  rdash-apps.yaml
artifacts/validation/: commands.md  expected-results.md
docs/: design.md
helm/charts/platform-addons/: Chart.yaml  values.yaml
helm/charts/rbac-validation/: Chart.yaml  values.yaml
helm/charts/rdash-service/: Chart.yaml  values.yaml
helm/values/: core.yaml  registry.yaml  worker.yaml
scripts/: capture_validation.sh
services/common/rdash_common/: __init__.py  auth.py  cache.py  config.py  database.py  logging.py  messaging.py  storage.py  telemetry.py
services/core/: Dockerfile  __init__.py
services/core/cmd/: __init__.py  app.py
services/core/sql/: 001_init.sql
services/registry/: Dockerfile  __init__.py
services/registry/cmd/: app.py
services/registry/sql/: 001_init.sql
services/validation/: Dockerfile
services/worker/: Dockerfile
services/worker/cmd/: __init__.py  app.py
terraform/: locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/environments/dev/: backend.hcl.example
terraform/modules/aks/: main.tf
terraform/modules/frontdoor/: main.tf
terraform/modules/keyvault/: main.tf
terraform/modules/network/: main.tf
terraform/modules/postgres/: main.tf
terraform/modules/redis/: main.tf
terraform/modules/servicebus/: main.tf
terraform/modules/storage/: main.tf
tests/: conftest.py  test_auth.py
(+19 files in other folders)
